--- a/src/components/Activities/ActivityDetail.css
+++ b/src/components/Activities/ActivityDetail.css
@@ -24,17 +24,26 @@
 /*
   Change color based on Activity type.
 */
-.activity--programming .sidebar__header .sidebar__title,
-.activity--programming .sidebar__header .sidebar__icon {
+.activity--programming .sidebar__title,
+.activity--programming .sidebar__icon {
   color: var(--indigo-blue-color);
 }
-
-.activity--testing .sidebar__header .sidebar__title,
-.activity--testing .sidebar__header .sidebar__icon {
-  color: var(--pumpkin-orange-color);
+.activity--programming .sidebar {
+  border-bottom: 3px solid var(--indigo-blue-color);
 }
 
-.activity-participation .sidebar__header .sidebar__title,
-.activity-participation .sidebar__header .sidebar__icon {
+.activity--testing .sidebar__title,
+.activity--testing .sidebar__icon {
+  color: var(--pumpkin-orange-color);
+}
+.activity--testing .sidebar {
+  border-bottom: 3px solid var(--pumpkin-orange-color);
+}
+
+.activity-participation .sidebar__title,
+.activity-participation .sidebar__icon {
   color: var(--purple-color);
+}
+.activity-participation .sidebar {
+  border-bottom: 3px solid var(--purple-color);
 }
