--- a/src/components/Activities/ActivityTile.css
+++ b/src/components/Activities/ActivityTile.css
@@ -12,7 +12,13 @@
   max-width: 336px;
   padding-left: 20px;
   padding-right: 20px;
-  padding-bottom: 37px;
+  padding-bottom: 57px;
+}
+
+@media only screen and (min-width : 576px) {
+  .activity-card {
+    padding-bottom: 37px;
+  }
 }
 
 .activity-card a {
@@ -71,6 +77,7 @@
   width: calc(100% - 40px);
   font-weight: 700;
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   padding: 0 0 0 0;
   background-color: transparent;
