--- a/src/components/Campaigns/CampaignTile.css
+++ b/src/components/Campaigns/CampaignTile.css
@@ -18,6 +18,10 @@
   flex-direction: column;
 }
 
+.campaign-card__text {
+  text-align: justify;
+}
+
 .campaign-card__button {
   margin-left: auto;
   margin-top: auto;
@@ -37,6 +41,7 @@
   margin-left: 15px;
   margin-right: 15px;
 }
+
 @media only screen and (min-width : 576px) {
   .campaign-card--active .campaign-card__col:first-child {
     min-width: 320px;
