Show newsletter description at all forms

--- a/src/components/NewsletterForm.css
+++ b/src/components/NewsletterForm.css
@@ -218,8 +218,8 @@
   width: auto;
 }
 
-.newsletter--illustrated .newsletter__subscribe-icon {
-
+.newsletter__description {
+  color: white;
 }
 
 .newsletter__subscribe-text {
