Fix warning header on subpages

--- a/src/components/Activities/ActivityDetail.css
+++ b/src/components/Activities/ActivityDetail.css
@@ -1,5 +1,5 @@
 .activity-page {
-  padding: 60px 0;
+  padding: 150px 0 60px;
   font-size: var(--small-font-size);
   color: var(--slate-grey-color);
 }
